tests/ui/type_checker/ok/fields.aru
struct User {
    age: int
}

func main() {
    let u: User = User { age: 20 }
    let x: int = u.age
}
