tests/ui/type_checker/invalid/unknown_field.aru
struct User {
    age: int
}

func main() {
    u: User = User { age: 10 }
    x: int = u.name
}
